objects/Impacted_Individual_Junction__c.object
<CustomObject>
    <description>Junction object between People and Impact. Describes a person&apos;s individual impact (related to the &apos;Impact Type&apos;)</description>
    <fields>
        <fullName>Crisis_Status__c</fullName>
        <formula>TEXT(Impact__r.Crisis__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crisis Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Personal_Impact__c</fullName>
        <inlineHelpText>Longer description of how this individual is impacted.</inlineHelpText>
        <label>Notes</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_End_Time__c</fullName>
        <description>When was this individual no longer impacted?</description>
        <inlineHelpText>When was this individual no longer impacted?</inlineHelpText>
        <label>Impact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact_Start_Time__c</fullName>
        <description>When was this individual first impacted?</description>
        <inlineHelpText>When was this individual first impacted?</inlineHelpText>
        <label>Impact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <referenceTo>Impact__c</referenceTo>
        <relationshipLabel>People Impacted</relationshipLabel>
        <relationshipName>Personal_Impact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Paycheck_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the crisis impacting this person&apos;s ability to collect a paycheck?</description>
        <inlineHelpText>Is the crisis impacting this person&apos;s ability to collect a paycheck?</inlineHelpText>
        <label>Paycheck Impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Impacted_Person__c</referenceTo>
        <relationshipLabel>Impact to Person</relationshipLabel>
        <relationshipName>Personal_Impact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Requires_Time_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this impacted person require time off work?</description>
        <inlineHelpText>Does this impacted person require time off work?</inlineHelpText>
        <label>Requires Time Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the impact to this person</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Currently Impacted</fullName>
                    <default>true</default>
                    <label>Currently Impacted</label>
                </value>
                <value>
                    <fullName>No Longer Impacted</fullName>
                </value>
                <value>
                    <fullName>Marked Safe / Not Impacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Impact to People</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Personal_Impact</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Impact__c</columns>
        <columns>Impact_Start_Time__c</columns>
        <columns>Requires_Time_Off__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Impact__c</field>
            <operation>notContain</operation>
            <value>test,placeholder</value>
        </filters>
        <label>All Impact to People</label>
    </listViews>
    <listViews>
        <fullName>Personal_Impact_Discovered_Today</fullName>
        <columns>Person__c</columns>
        <columns>Impact__c</columns>
        <columns>Status__c</columns>
        <columns>Paycheck_Impacted__c</columns>
        <columns>Requires_Time_Off__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Currently Impacted</value>
        </filters>
        <label>Newly Impacted Individuals</label>
    </listViews>
    <nameField>
        <displayFormat>IMP-{0000000}</displayFormat>
        <label>Personal Impact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact to People</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>